// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should enable save button 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div
      className="page-container page-body"
    >
      <h2
        className="page-sub-heading"
      >
        Folder Settings
      </h2>
      <div
        className="section gf-form-group"
      >
        <form
          name="folderSettingsForm"
          onSubmit={[Function]}
        >
          <div
            className="gf-form"
          >
            <label
              className="gf-form-label width-7"
            >
              Name
            </label>
            <input
              className="gf-form-input width-30"
              onChange={[Function]}
              type="text"
              value="loading"
            />
          </div>
          <div
            className="gf-form-button-row"
          >
            <button
              className="btn btn-success"
              disabled={false}
              type="submit"
            >
              <i
                className="fa fa-save"
              />
               Save
            </button>
            <button
              className="btn btn-danger"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="fa fa-trash"
              />
               Delete
            </button>
          </div>
        </form>
      </div>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render component 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div
      className="page-container page-body"
    >
      <h2
        className="page-sub-heading"
      >
        Folder Settings
      </h2>
      <div
        className="section gf-form-group"
      >
        <form
          name="folderSettingsForm"
          onSubmit={[Function]}
        >
          <div
            className="gf-form"
          >
            <label
              className="gf-form-label width-7"
            >
              Name
            </label>
            <input
              className="gf-form-input width-30"
              onChange={[Function]}
              type="text"
              value="loading"
            />
          </div>
          <div
            className="gf-form-button-row"
          >
            <button
              className="btn btn-success"
              disabled={true}
              type="submit"
            >
              <i
                className="fa fa-save"
              />
               Save
            </button>
            <button
              className="btn btn-danger"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="fa fa-trash"
              />
               Delete
            </button>
          </div>
        </form>
      </div>
    </div>
  </PageContents>
</Page>
`;
